# PyGem

./: .dockerignore  .gitignore  Dockerfile  FRAMEWORK_SUMMARY.md  Resolve Kafka and Redis  Issuse On Local.txt  TESTING_GUIDE.md  bootstrap.ps1  build.ps1  docker-compose.yml  messaging.eventbus.yml  pygem.yml  pyproject.toml  readme.md  requirements.txt  run.ps1  setup.ps1
.github/workflows/: ci-cd.yml
app/: application.py  bootstrap.py  main.py  main_simple.py  main_working.py  pygem.py  pygem_instance.py  registry.py
app/config/: db_session.py  dependencies.py  factory.py  init_core_services.py  logger.py  session.py  settings.py
app/feature1/: crud.py  routes.py  services.py
app/feature2/: crud.py  routes.py  services.py
app/health/: __init__.py  health_service.py
app/notifications/: notifications_service.py  notifications_servixe.py
app/orders/: order_service.py
app/shared/: annotations.py  cdi.py  pygem.py  pygem_simple.py
app/shared/annotations/: core.py  logging.py  messaging.py
app/shared/clients/: kafka_client.py  redis_client.py
app/shared/database/: base.py  base_client.py  postgre_sql_client.py
app/shared/event_bus/: base.py  in_process_eventbus.py  kafka_bus.py  redis_bus.py
app/shared/health/: health_check.py  router.py
app/shared/logger/: bulletproof_logger.py  (+1 more)
examples/: annotations_demo.py  ecommerce_app.py  simple_example.py
tests/: test_annotations.py  test_event_bus.py  test_event_bus_factory.py  test_kafka_client.py  test_kafka_event_bus.py  test_redis_client.py  test_redis_event_bus.py  test_simple_cdi.py
(+11 files in other folders)
